add spacer and css line

--- a/www/lp_wafat.html
+++ b/www/lp_wafat.html
@@ -30,6 +30,7 @@
                            https://*.gstatic.com
                            https://*.googleapis.com
                            https://*.firebaseio.com" />
+    <link rel="stylesheet" type="text/css" href="css/pakrt.css" />
     <!-- bootstrap resource -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
