--- a/www/stapen.html
+++ b/www/stapen.html
@@ -65,6 +65,7 @@
 		<table id="stadata" class="table table-sm"></table>
 	</div>
 </div>
+  <div class="row" style="height:60px">&nbsp;</div>
   <div class="row page-footer"> 
 	  <p>Komunitas Linux Banjarnegara<br/>&copy;2016</p> 
   </div>
